# terminal-dashboard

./: .gitignore  CLAUDE.md  CMakeLists.txt  config.ini  dashboard.ini
.claude/: settings.local.json
src/: config.c  config.h  main.c  metrics.h  metrics_darwin.c  metrics_gpu.h  metrics_gpu_nvidia.c  metrics_win32.c  render.c  render.h
tests/: test_graph.c  test_memory_leaks.c  test_render.c
